--- a/src/components/login/LoginForm.scss
+++ b/src/components/login/LoginForm.scss
@@ -20,6 +20,7 @@
             align-items: center;
             button{
                 border-radius: 5px;
+                margin-right: 10px;
             }
             }
         }
