--- a/src/page/home/HomePage.scss
+++ b/src/page/home/HomePage.scss
@@ -36,14 +36,15 @@
                     justify-content: center;
                     align-items: flex-start;
                     flex-direction: column;
-                    p{
+                    div{
                         display: flex;
                         flex-direction: row;
                         font-size: 24px;
                         margin: 5px;
-                        div{
+                        p{
                             margin-left: 5px;
                             max-width: 390px;
+                            margin: 0px;
                         }
                     }
                 }
